# fastdjango

./: .flake8  .gitignore  Dockerfile  MakeFile  README.md  conftest.py  database.py  docker-compose.yml  env_app.py  main.py  models.py  pyproject.toml  settings.py  tasks.py  utlis.py
alembic/: env.py
alembic/versions/: 0f05679076a3_initial.py  82a311a635f6_.py  896d1546f1d8_.py  95e0167fdacd_.py  d6fe2acdacea_.py  d76edef4de95_init.py  faa43212970f_.py
api/: models.py  models_api.py  query_db.py  router.py  schema.py  view.py
fhelp/: alembic_env.py  base_conftest.py  base_schema.py  command.py  database.py  database_async.py  fadmin.py  fcached.py  fexception_handler.py  ffiextures.py  fixtures.py  fjwt.py  flogger.py  fmiddleware.py  ftest.py  invoke_tasks.py  utlis.py  viewset.py
fhelp/admin_static/: index.html  main.css  main.js  styles.css
fhelp/admin_static/templates/: index.html  index_admin.html  models.html  redis_all_keys.html  retrive_row.html  rows_model.html
fixtures/: base.json  test_base.json  users.json
test/: test_main.py
